# brush-tool-selection

./: .gitattributes  .gitignore  __init__.py  brush_selection_plugin.py  metadata.txt  package.sh  pyproject.toml  readme.md
.github/workflows/: release.yml
BrushSelectionTool/: __init__.py  brush_selection_plugin.py  metadata.txt
